fix(problem): fix testcase input/output filename text cropped vertically

--- a/src/pages/problem/judge-settings/ProblemJudgeSettingsPage.module.less
+++ b/src/pages/problem/judge-settings/ProblemJudgeSettingsPage.module.less
@@ -240,6 +240,10 @@
         text-overflow: ellipsis;
         overflow: hidden;
         direction: rtl;
+        height: 28px;
+        line-height: 28px;
+        margin-top: -7px;
+        margin-bottom: -7px;
       }
 
       .fileSize {
